# constraint-based-layout

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.js
csharp/: ConstraintArithmetic.cs  ConstraintSDK.csproj  Controls.cs  Solver.cs  SystemControls.cs  SystemControlsWin32.cs
examples/bare_wasm_cpp/: CMakeLists.txt  index.html  index.js  main.cpp
examples/emscripten_cpp/: CMakeLists.txt  index.html  index.js  main.cpp
examples/emscripten_csharp/: EmscriptenCSharp.csproj  Example.csproj  Program.cs  Solver.cs  index.html  index.js  nuget.config
examples/wasm/: index.css  index.html  index.js  main.cpp  wasm32.cmake
examples/wasm_cpp/: index.js  main.cpp
examples/wasm_csharp/: Program.cs  WasmCSharp.csproj  index.html
examples/windows_cpp/: CMakeLists.txt  main.cpp
examples/windows_csharp/: Example.csproj  Program.cs  nuget.config
include/: constraint_arithmetic.h  controls.h  environment.h
lib/: constraint_arithmetic.cpp  solver.c
lib/browser/: controls.js
lib/csharp/ConstraintArithmetic/: ConstraintArithmetic.cs
lib/csharp/Controls/: Controls.cs
lib/wasm_browser/: controls.js
sdk/: CMakeLists.txt
sdk/cmake/: ConstraintSDKConfig.cmake
sdk/include/: constraint_arithmetic.h  controls.h  list.h  solver.h  system_controls.h  system_controls_win32.h
sdk/lib/: CMakeLists.txt  constraint_arithmetic.cpp  controls.cpp  solver.c  system_controls_win32.cpp
sdk/lib/browser/: system_controls.js  system_controls_emscripten.js
sdk/lib/csharp/ConstraintArithmetic/: ConstraintArithmetic.cs  ConstraintArithmetic.csproj
sdk/lib/csharp/Controls/: Controls.cs  Controls.csproj
sdk/lib/csharp/SystemControls/: SystemControls.cs
src/: constraint_arithmetic.cpp  constraint_arithmetic.h  debug.h  environment.h  index.js  main.cpp  solver.cpp  solver.h
